[gd_scene load_steps=15 format=2]

[ext_resource path="res://ASSETS/enemies/crocodile2.png" type="Texture" id=1]
[ext_resource path="res://ASSETS/enemies/crocodile1.png" type="Texture" id=2]
[ext_resource path="res://ASSETS/enemies/crocodile7.png" type="Texture" id=3]
[ext_resource path="res://ASSETS/enemies/crocodile6.png" type="Texture" id=4]
[ext_resource path="res://ASSETS/enemies/crocodile3.png" type="Texture" id=5]
[ext_resource path="res://ASSETS/enemies/crocodile10.png" type="Texture" id=6]
[ext_resource path="res://ASSETS/enemies/crocodile5.png" type="Texture" id=7]
[ext_resource path="res://ASSETS/enemies/crocodile11.png" type="Texture" id=8]
[ext_resource path="res://ASSETS/enemies/crocodile9.png" type="Texture" id=9]
[ext_resource path="res://ASSETS/enemies/crocodile8.png" type="Texture" id=10]
[ext_resource path="res://ASSETS/enemies/crocodile4.png" type="Texture" id=11]
[ext_resource path="res://Crocodile.gd" type="Script" id=12]
[ext_resource path="res://ASSETS/transparent.png" type="Texture" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 11 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[node name="Area2D" type="Area2D"]
script = ExtResource( 12 )

[node name="Crocodile" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 10

[node name="Coll0" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 15, 40, 15, 30, 31, 19, 40, 20, 50, 30, 50, 39 )

[node name="Coll1" type="CollisionPolygon2D" parent="."]
position = Vector2( -1, 0 )
polygon = PoolVector2Array( 6, 41, 6, 20, 12, 10, 31, 10, 47, 21, 50, 40 )

[node name="Coll2" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -45, 39, -51, 29, -50, 11, -30, -10, -25, -21, -15, -25, 0, -24, 6, -19, 31, 11, 40, 15, 60, 20, 70, 31, 70, 40 )

[node name="Coll3" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -70, 39, -69, 20, -20, -35, -10, -40, 5, -40, 35, -4, 44, 0, 70, 30, 70, 41 )

[node name="Coll4" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -27, 40, -38, 22, -30, -10, -19, -19, -4, -18, 27, 20, 50, 21, 66, 37, 66, 41 )

[node name="Coll5" type="CollisionPolygon2D" parent="."]
position = Vector2( -27, 0 )
polygon = PoolVector2Array( 15, 40, 15, 30, 31, 19, 40, 20, 50, 30, 50, 39 )

[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
